FullQa New/src/objects/Success_Plan_Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Success Plan Fulfillments</relationshipLabel>
        <relationshipName>Success_Plan_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Success Plan Fulfillments</relationshipLabel>
        <relationshipName>Success_Plan_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Fulfilled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours Fulfilled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Purchased__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Success Plan Fulfillments</relationshipLabel>
        <relationshipName>Success_Plan_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Success Plan Fulfillment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Success Plan Fulfillment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plan Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>